--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.png" />
+
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icon.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carona FAM</title>
   </head>
